--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,27 @@
+:root {
+  --slate: #8892b0;
+  --accent: #EB5D63;
+}
+
 .App {
   text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 40vh;
+  border-radius: 50%;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    animation: App-logo-spin infinite 10s linear;
   }
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: black;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -24,15 +30,117 @@
   color: white;
 }
 
+.App-header h1 {
+  margin: 0;
+}
+
+.App-header h1 .blast {
+  display: inline-block;
+  animation-duration: 1s;
+  animation-fill-mode: both;
+  animation-iteration-count: 1;
+  background: linear-gradient(to right, var(--slate) 50%, var(--accent) 50%);
+  background-size: 200%;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  transition: 0.4s ease-out;
+  margin: 20px 0px;
+}
+
+.App-header h1 .blast:hover {
+  background-position: -100%;
+  animation-name: rubberBand;
+}
+
+.App-header .action-btn {
+  background: transparent;
+  border: 2px solid white;
+  border-radius: 6px;
+  box-shadow: rgb(255, 255, 255) 1px 2px 4px;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  display: inline-block;
+  font-family: nunito,roboto,proxima-nova,"proxima nova",sans-serif;
+  font-size: 16px;
+  font-weight: 800;
+  line-height: 16px;
+  min-height: 40px;
+  outline: 0;
+  padding: 12px 14px;
+  text-align: center;
+  text-rendering: geometricprecision;
+  text-transform: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: middle;
+  margin-bottom: 15px;
+  transition: 300ms;
+}
+
+.App-header .action-btn:hover,
+.App-header .action-btn:active {
+  background-color: white;
+  background-position: 0 0;
+  color: black;
+}
+
+.App-header .action-btn:active {
+  opacity: .5;
+  transform: translateY(-2px);
+}
+
 .App-link {
   color: #61dafb;
 }
 
+.App-footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  text-align: center;
+  width: 100%;
+  padding-bottom: 10px;
+  color: #fff;
+  font-style: italic;
+}
+
+.App-footer a:visited {
+  color: #fff;
+}
+
+
+/* Animations */
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+@keyframes rubberBand {
+  from {
+    transform: scale3d(1, 1, 1);
+  }
+  30% {
+    transform: scale3d(1.25, 0.75, 1);
+  }
+  40% {
+    transform: scale3d(0.75, 1.25, 1);
+  }
+  50% {
+    transform: scale3d(1.15, 0.85, 1);
+  }
+  65% {
+    transform: scale3d(.95, 1.05, 1);
+  }
+  75% {
+    transform: scale3d(1.05, .95, 1);
+  }
+  to {
+    transform: scale3d(1, 1, 1);
   }
 }
