--- a/src/App.css
+++ b/src/App.css
@@ -7,94 +7,7 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vh;
-  border-radius: 50%;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 10s linear;
-  }
-}
-
-.App-header {
-  background-color: black;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-header h1 {
-  margin: 0;
-}
-
-.App-header h1 .blast {
-  display: inline-block;
-  animation-duration: 1s;
-  animation-fill-mode: both;
-  animation-iteration-count: 1;
-  background: linear-gradient(to right, var(--slate) 50%, var(--accent) 50%);
-  background-size: 200%;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  transition: 0.4s ease-out;
-  margin: 20px 0px;
-}
-
-.App-header h1 .blast:hover {
-  background-position: -100%;
-  animation-name: rubberBand;
-}
-
-.App-header .action-btn {
-  background: transparent;
-  border: 2px solid white;
-  border-radius: 6px;
-  box-shadow: rgb(255, 255, 255) 1px 2px 4px;
-  box-sizing: border-box;
-  color: #FFFFFF;
-  cursor: pointer;
-  display: inline-block;
-  font-family: nunito,roboto,proxima-nova,"proxima nova",sans-serif;
-  font-size: 16px;
-  font-weight: 800;
-  line-height: 16px;
-  min-height: 40px;
-  outline: 0;
-  padding: 12px 14px;
-  text-align: center;
-  text-rendering: geometricprecision;
-  text-transform: none;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  vertical-align: middle;
-  margin-bottom: 15px;
-  transition: 300ms;
-}
-
-.App-header .action-btn:hover,
-.App-header .action-btn:active {
-  background-color: white;
-  background-position: 0 0;
-  color: black;
-}
-
-.App-header .action-btn:active {
-  opacity: .5;
-  transform: translateY(-2px);
-}
-
-.App-link {
-  color: #61dafb;
-}
-
+/* Footer */
 .App-footer {
   position: fixed;
   left: 0;
