--- a/src/components/add_contact/add_contact.css
+++ b/src/components/add_contact/add_contact.css
@@ -1,8 +1,46 @@
-.contact-list {
-    justify-content: center;
+.add-contact {
+    position: fixed;
+    top: 20%;
+    right: 20%;
+}
+
+.add-contact .btn-Add {
+    color: white;
+    border: 2px solid #fff;
+    transition: .2s;
+}
+
+.add-contact .btn-Add:hover {
+    color: white;
+    border: 2px solid #fff;
+    box-shadow: 1px 0.5px 5px;
+}
+
+.add-contact .btn-Submit,
+.css-bvdxet .css-sghohy-MuiButtonBase-root-MuiButton-root { /*Modal Submit Button*/
     display: flex;
+    margin: auto;
+    width: 150px;
+    height: 40px;
+    letter-spacing: .7px;
+}
+
+.css-bvdxet { /*Modal*/
+    border: 2px solid lightgray !important;
+    background: #fff;
+}
+
+.css-bvdxet .modal-title { /*Modal Title*/
+    margin: 0px 0px 25px 0px;
+    color: var(--primary);
     text-align: center;
-    align-items: center;
-    height: 100vh;
-    flex-direction: column;
+    text-shadow: 2px 1px 1px lightgray;
+}
+
+.css-bvdxet .css-1x51dt5-MuiInputBase-input-MuiInput-input { /*Modal Inputs*/
+    width: 100vw;
+}
+
+.css-bvdxet .css-oe0os1-MuiSvgIcon-root { /*Modal Inputs Icons*/
+    fill: var(--primary);
 }
